[package]
name = "grlm"
version = "1.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]

[[bin]]
name = "grlm"
path = "src/bin/main.rs"
doc = false

[lib]
name = "grlm"
path = "src/grlm.rs"

[dependencies]
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.2"
tokio-core = "0.1"
failure = "0.1.1"
indicatif = "0.9.0"
parking_lot = "0"
libc = "0"
